# ukb-cad-llm-finetuning

./: .gitignore  README.md  pyproject.toml
configs/datasets/: medical_binary.yaml
configs/deepspeed/: zero2.json  zero2_offload.json
configs/experiments/: qwen2_medical_full.yaml  qwen2_medical_lora.yaml
configs/models/: qwen2_7b_seq_cls_full.yaml  qwen2_7b_seq_cls_lora.yaml  seq_cls.yaml
configs/tasks/: binary_classification.yaml
scripts/eval/: eval_binary_cls.sh
scripts/train/: finetune_full.sh  finetune_lora.sh  finetune_qlora.sh
src/cad_finetune/cli/: eval.py  overrides.py  train.py
src/cad_finetune/data/: collators.py
src/cad_finetune/heads/: __init__.py  binary_linear.py
src/cad_finetune/models/: __init__.py  factory.py  sequence_classifier.py
src/cad_finetune/tasks/classification/: __init__.py  dataset.py  metrics.py
src/cad_finetune/train/: runner.py  trainer.py
src/cad_finetune/utils/: __init__.py  config.py
